[metadata]
name = heat-contrib-nuage
summary = Heat resources for working with Nuage VSP
description-file =
    README.md
author = Alcatel-Lucent
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    nuage

# Copy to /usr/lib/heat for non-stevedore plugin loading
data_files =
    lib/heat/nuage = nuage/resources/*

[global]
setup-hooks =
    pbr.hooks.setup_hook
