[metadata]
name = nuage-openstack-heat
summary = Heat resources for working with Nuage VSP
description-file =
    README.md
author = Alcatel-Lucent
author-email = info@nuagenetworks.net
home-page = http://www.nuagenetworks.net/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    nuage-heat

extra_files =
    nuage-heat/heat-templates/hot/gateway.yaml
    nuage-heat/heat-templates/hot/l3_redirect.yaml
    nuage-heat/heat-templates/hot/redirect_targets.yaml
    nuage-heat/heat-templates/hot/nuage_security_group.yaml
    nuage-heat/heat-templates/hot/server_new_netpartition.yaml

[global]
setup-hooks =
    pbr.hooks.setup_hook
